--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node api/server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
     "axios": "^1.7.9",
+    "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
